<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="@color/backGroundApp">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/res1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView5" android:textColor="#ECE1E1"
                    android:textSize="10pt" android:gravity="center"
                    android:layout_marginLeft="4pt" android:layout_marginRight="4pt" android:layout_marginBottom="4pt"
                    android:layout_marginTop="1pt" android:layout_margin="4pt" android:padding="4pt"/>
            <TextView
                    android:text="@string/question1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView"
                    android:textColor="@color/plainText"
                    android:layout_marginLeft="4pt" android:layout_marginRight="4pt" android:paddingLeft="2pt"
                    android:paddingRight="2pt" android:padding="4pt"/>
            <TextView
                    android:text="@string/res2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView6" android:textColor="#ECE1E1"
                    android:gravity="center" android:textSize="10pt"
                    android:layout_marginLeft="2pt" android:layout_marginRight="2pt" android:paddingLeft="4pt"
                    android:paddingRight="4pt" android:layout_margin="4pt" android:padding="4pt"/>
            <TextView
                    android:text="@string/question2_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView2"
                    android:textColor="@color/plainText" android:layout_marginLeft="4pt"
                    android:layout_marginTop="4pt" android:layout_marginRight="4pt" android:paddingLeft="4pt"
                    android:paddingTop="4pt" android:paddingRight="4pt"/>
            <TextView
                    android:text="@string/question2_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView7" android:paddingLeft="4pt"
                    android:paddingRight="4pt" android:paddingBottom="4pt" android:layout_marginLeft="4pt"
                    android:layout_marginRight="4pt" android:layout_marginBottom="4pt"
                    android:textColor="@color/plainText"/>
            <TextView
                    android:text="@string/res3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView3"
                    android:textColor="#ECE1E1" android:layout_marginLeft="4pt"
                    android:layout_marginRight="4pt" android:layout_marginBottom="4pt" android:layout_marginTop="15pt"
                    android:textSize="10pt" android:gravity="center" android:paddingLeft="4pt"
                    android:paddingRight="4pt" android:padding="4pt"/>
            <TextView
                    android:text="@string/question3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_margin="4pt"
                    android:padding="4pt" android:textColor="@color/plainText"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>